--- a/index.html
+++ b/index.html
@@ -11,11 +11,84 @@
     />
     <!-- title -->
     <title>law school boost</title>
+    <!-- manrope -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;600;800&display=swap"
+      rel="stylesheet"
+    />
+    <!-- gilory font -->
+    <link href="https://fonts.cdnfonts.com/css/gilroy" rel="stylesheet" />
     <!-- main style -->
     <link rel="stylesheet" href="public/css/main-style.css" />
   </head>
-  <body>
-    
+  <body class="font-main-font">
+    <!-- navigation bar -->
+    <header
+      class="absolute inset-0 w-full py-9 text-white text-xl font-bold h-fit"
+    >
+      <nav>
+        <div class="container flex justify-between">
+          <div class="logo">
+            <img src="public/images/logo.png" alt="logo" />
+          </div>
+          <ul class="capitalize flex items-center gap-10">
+            <li><a href="#">why you'll love us</a></li>
+            <li><a href="#">features</a></li>
+            <li><a href="#">the science</a></li>
+            <li><a href="#">why we're better</a></li>
+            <li><a href="#">testimonials</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <!-- hero -->
+    <section
+      class="bg-[url('../images/hero-banner.png')] bg-cover bg-center py-44 relative"
+    >
+      <div class="container grid grid-cols-[2fr_1fr] w-[90%]">
+        <!-- text container -->
+        <div class="text-white">
+          <h1 class="capitalize font-heading-font font-bold text-7xl mb-4">
+            study faster <br />
+            <span class="text-yellow-color">remember long</span>
+          </h1>
+          <p class="text-2xl mb-14">
+            Law School Boost makes studying for law school and the Bar easier
+            using our science-backed, A.I.-driven, adaptive flashcards with
+            integrated hypos, plain English legal translations, and memorable
+            illustrations.
+            <span class="text-yellow-color">Start now for FREE!</span>
+          </p>
+          <div class="flex gap-5">
+            <a href="#">
+              <img src="public/images/app-store.svg" alt="app store download" />
+            </a>
+            <a href="#">
+              <img
+                src="public/images/play-store.svg"
+                alt="play store download"
+              />
+            </a>
+          </div>
+        </div>
+        <!-- middle missle -->
+        <img
+          src="public/images/hero-missle.png"
+          alt="decorative missle"
+          class="absolute left-1/2 -translate-x-1/2 bottom-0"
+        />
+        <!-- img container -->
+        <div>
+          <img
+            src="public/images/hero-phone.svg"
+            alt="decorative hero banner phone"
+            class="object-cover"
+          />
+        </div>
+      </div>
+    </section>
   </body>
 
   <script src="public/js/main-script.js"></script>
