--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <div class="container">
         <!-- flex container -->
         <div
-          class="flex justify-between w-[90%] bg-navy-color rounded-2xl mx-auto py-7 px-14 flex-wrap gap-y-20 items-center"
+          class="grid grid-cols-reponsive-6 w-[90%] bg-navy-color rounded-2xl mx-auto py-7 px-14 gap-y-20"
         >
           <!-- box -->
           <div class="flex flex-col justify-between basis-40">
