added till instution reveiw with some problems to fix

--- a/index.html
+++ b/index.html
@@ -527,10 +527,105 @@
     <!-- institutino reviews -->
     <section class="pt-20">
       <div class="container">
-        <h2>what others are saying:</h2>
+        <h2 class="mb-16">what others are saying:</h2>
 
         <div class="owl-carousel">
-          <div class="flex flex-col gap-16"></div>
+          <!-- review box -->
+          <div
+            class="flex flex-col items-center gap-16 bg-dark-grey-color rounded-lg pt-16 pb-36 px-4 h-full"
+          >
+            <!-- logo holder -->
+            <div class="w-1/2 mx-auto">
+              <img src="public/images/harvard-review.svg" alt="harvard logo" />
+            </div>
+            <!-- text -->
+            <div>
+              <p class="text-white text-2xl font-semibold">
+                Studies show that by using
+                <span class="text-yellow-color">spaced repetition</span>, we can
+                <span class="text-yellow-color"
+                  >remember about 80% of what we learn after 60 days</span
+                >
+                — a significant improvement.
+              </p>
+            </div>
+          </div>
+          <!-- review box -->
+          <div
+            class="flex flex-col items-center gap-16 bg-dark-grey-color rounded-lg pt-16 pb-36 px-4 h-full"
+          >
+            <!-- logo holder -->
+            <div class="mx-auto">
+              <img
+                src="public/images/american-bar-review.svg"
+                alt="harvard logo"
+              />
+            </div>
+            <!-- text -->
+            <div>
+              <p class="text-white text-2xl font-semibold">
+                <span class="text-yellow-color">Spaced repetition</span> allows
+                students to memorize
+                <span class="text-yellow-color">more than ever before</span> —
+                and to do
+                <span class="text-yellow-color">so in less time</span> than it
+                takes to cram as most currently do. Using it
+                <span class="text-yellow-color">improves exam performance</span>
+                , makes class less stressful, and helps
+                <span class="text-yellow-color"
+                  >improve school-life balance.</span
+                >
+              </p>
+            </div>
+          </div>
+          <!-- review box -->
+          <div
+            class="flex flex-col items-center gap-16 bg-dark-grey-color rounded-lg pt-16 pb-36 px-4 h-full"
+          >
+            <!-- logo holder -->
+            <div class="w-1/2 mx-auto">
+              <img src="public/images/harvard-review.svg" alt="harvard logo" />
+            </div>
+            <!-- text -->
+            <div>
+              <p class="text-white text-2xl font-semibold">
+                Studies show that by using
+                <span class="text-yellow-color">spaced repetition</span>, we can
+                <span class="text-yellow-color"
+                  >remember about 80% of what we learn after 60 days</span
+                >
+                — a significant improvement.
+              </p>
+            </div>
+          </div>
+          <!-- review box -->
+          <div
+            class="flex flex-col items-center gap-16 bg-dark-grey-color rounded-lg pt-16 pb-36 px-4 h-full"
+          >
+            <!-- logo holder -->
+            <div class="mx-auto">
+              <img
+                src="public/images/american-bar-review.svg"
+                alt="harvard logo"
+              />
+            </div>
+            <!-- text -->
+            <div>
+              <p class="text-white text-2xl font-semibold">
+                <span class="text-yellow-color">Spaced repetition</span> allows
+                students to memorize
+                <span class="text-yellow-color">more than ever before</span> —
+                and to do
+                <span class="text-yellow-color">so in less time</span> than it
+                takes to cram as most currently do. Using it
+                <span class="text-yellow-color">improves exam performance</span>
+                , makes class less stressful, and helps
+                <span class="text-yellow-color"
+                  >improve school-life balance.</span
+                >
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
